syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.cassandra.grpc";
option java_outer_classname = "WorkloadProto";

package workloadgenerator.workload;

message ReadRequest {
    string key = 1;
}

message ReadResponse {
    string value = 1;
}

message WriteRequest {
    string key = 1;
    string value = 2;
}

message WriteResponse {
    bool success = 1;
}

service Workload {
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Write(WriteRequest) returns (WriteResponse);
}